b=808114 don't hide mContainer in toplevels, to keep a focus widget for grabs r=roc